# Refactor-and-CI

./: .flake8  .flask8  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
my_package/: __init__.py  setup.py
my_package/connector/: connector.py
my_package/logic_gates/: __init__.py  and_gate.py  eight_bit_adder.py  nand_gate.py  nor_gate.py  not_gate.py  nth_bit_adder.py  or_gate.py  xor_gate.py
tests/: test_connector.py  test_eight_bit_adder.py  test_logic_gates.py  test_nth_bit_adder.py
