[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "A Python package for logic gates"
authors = ["snasar1 <sumiranasar1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
